Fixed: Icon List block icon vertical alignment. Fixes #97

--- a/src/block/icon-list/style.scss
+++ b/src/block/icon-list/style.scss
@@ -20,6 +20,7 @@
 		background-image: var(--icon);
 		background-size: cover;
 		background-position: center;
+		transform: translateY(-10%);
 	}
 	li {
 		margin-top: 0 !important;
